[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://content/upgrades/skill_tree_ui.gd" id="1"]

[node name="SkillTreeUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 0.95)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
text = "UPGRADE TREE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TreeContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="InfoPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -200.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="InfoPanel"]
layout_mode = 2

[node name="UpgradeName" type="Label" parent="InfoPanel/VBox"]
layout_mode = 2
text = "Upgrade Name"
horizontal_alignment = 1

[node name="Description" type="Label" parent="InfoPanel/VBox"]
layout_mode = 2
text = "Description goes here"
autowrap_mode = 3

[node name="Cost" type="Label" parent="InfoPanel/VBox"]
layout_mode = 2
text = "Cost: 100"

[node name="Level" type="Label" parent="InfoPanel/VBox"]
layout_mode = 2
text = "Level: 0/3"

[node name="PurchaseButton" type="Button" parent="InfoPanel/VBox"]
layout_mode = 2
text = "Purchase"
